# InfiniteWisdom

./: Dockerfile  README.md  alembic.ini  analysis.py  bot.py  config.py  const.py  db_merge.py  db_migration.py  download_image_data.py  infinitewisdom-example.yaml  infinitewisdom.yaml  persistence.py  pyproject.toml  requirements.txt  stats.py
.circleci/: config.yml
.github/workflows/: docker.yml
alembic/: env.py
alembic/versions/: 6251223b7a77_added_table_to_add_telegram_file_bot_.py  6ef730f2340b_initial_state.py  76e388cb011b_migrate_telegram_file_id_to_its_own_.py  8c7e750c5f11_removed_unnecessary_index.py  a7b7c2c9b5c2_added_indexes_to_url_telegram_file_id_.py  eb14dd47366a_added_updated_column_to_image_entity.py  ee05ae1a75b1_added_image_data_and_image_hash_columns.py
infinitewisdom/: __init__.py  analysis.py  bot.py  config.py  const.py  crawler.py  main.py  persistence.py  stats.py  uploader.py  util.py
infinitewisdom/analysis/: __init__.py  googlevision.py  microsoftazure.py  tesseract.py  worker.py
infinitewisdom/config/: __init__.py  config.py
infinitewisdom/persistence/: __init__.py  image_persistence.py  pickle.py  sqlalchemy.py
tests/: image_api_test.py
